src/test/ui/type-alias-impl-trait/multiple-def-uses-in-one-fn.stderr
error: defining use generics `[B, A]` differ from previous defining use
  --> $DIR/multiple-def-uses-in-one-fn.rs:9:45
   |
LL | fn f<A, B: 'static>(a: &'static A, b: B) -> (X<A, B>, X<B, A>) {
   |                                             ^^^^^^^^^^^^^^^^^^
   |
note: previous defining use with different generics `[A, B]` found here
  --> $DIR/multiple-def-uses-in-one-fn.rs:9:45
   |
LL | fn f<A, B: 'static>(a: &'static A, b: B) -> (X<A, B>, X<B, A>) {
   |                                             ^^^^^^^^^^^^^^^^^^

error: defining use generics `[B, A]` differ from previous defining use
  --> $DIR/multiple-def-uses-in-one-fn.rs:9:1
   |
LL | fn f<A, B: 'static>(a: &'static A, b: B) -> (X<A, B>, X<B, A>) {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: previous defining use with different generics `[A, B]` found here
  --> $DIR/multiple-def-uses-in-one-fn.rs:9:1
   |
LL | fn f<A, B: 'static>(a: &'static A, b: B) -> (X<A, B>, X<B, A>) {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 2 previous errors

